# lickometer-black-mesa

./: .clang  .clangd  .gitignore  CMakeLists.txt  MPR121.h  Makefile  README.md  Wire.h  \  compile_commands.json  constants.cpp  constants.hpp  generate_compile_commands.sh  lickometer  logger.hpp  main.cpp  makeArduino
.build/: lickometer.elf  lickometer.hex
.build/core/: CDC.cpp.d  HardwareSerial.cpp.d  HardwareSerial0.cpp.d  HardwareSerial1.cpp.d  HardwareSerial2.cpp.d  HardwareSerial3.cpp.d  IPAddress.cpp.d  PluggableUSB.cpp.d  Print.cpp.d  Stream.cpp.d  Tone.cpp.d  USBCore.cpp.d  WInterrupts.c.d  WMath.cpp.d  WString.cpp.d  abi.cpp.d  hooks.c.d  new.cpp.d  wiring.c.d  wiring_analog.c.d  wiring_digital.c.d  wiring_pulse.S.d  wiring_pulse.c.d  wiring_shift.c.d
.build/project/: main.cpp.d
arduino-lickometer-black-mesa/: README_ARDUINO.txt  arduino-lickometer-black-mesa.ino  logger.hpp
arduino_compat/: new
arduino_lickometer_black_mesa/: README_ARDUINO.txt  arduino_lickometer_black_mesa.ino  constants.hpp  logger.hpp
cage/: cage.hpp
cage_data/: cage_data.hpp
cap_sensor/: cap_sensor.cpp  cap_sensor.hpp
cmake/arduino_stubs/: Arduino.h  MPR121.h  SdFat.h  TimeLib.h  arduino_stubs.cpp
data/: bout.hpp  clock.hpp  lick.hpp
mpr_manager/: mpr_manager.cpp  mpr_manager.hpp
sd_writer/: sd_writer.cpp  sd_writer.hpp
src/cage/: cage.hpp
src/cage_data/: cage_data.cpp  cage_data.hpp
src/cap_sensor/: cap_sensor.cpp  cap_sensor.hpp
src/data/: lick.hpp
src/mpr_manager/: mpr_manager.cpp  mpr_manager.hpp
src/screen_manager/: screen_manager.cpp  (+1 more)
(+24 files in other folders)
